demoargo/demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: demo-ingress
spec:
 rules:
 - host: demoargo.home.lab
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: demo-service
           port: 
            number: 80
